--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-fase-cierre/tabla-fase-cierre.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-fase-cierre/tabla-fase-cierre.component.html
@@ -5,43 +5,45 @@
       </span>
     </aside>
     <div class="table-responsive">
-        <table mat-table [dataSource]="dataSource" matSort #matTable>
+      <table mat-table [dataSource]="dataSource" matSort #matTable>
       
-          <ng-container matColumnDef="funcionalidad">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Funcionalidad </th>
-              <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.funcionalidad }} </b> </td>
-          </ng-container>
-    
-          <ng-container matColumnDef="crear">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Crear </th>
+        <ng-container matColumnDef="funcionalidad">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Funcionalidad </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <mat-checkbox class="example-margin"></mat-checkbox>
+              <b>{{ element.get( 'funcionalidad' ).value }}</b>
             </td>
-          </ng-container>
-    
-          <ng-container matColumnDef="modificar">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Modificar </th>
-            <td mat-cell *matCellDef="let element" align="center">
-                <mat-checkbox class="example-margin"></mat-checkbox>
-            </td>
-          </ng-container>
-        
-          <ng-container matColumnDef="consultar">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Consultar </th>
-            <td mat-cell *matCellDef="let element" align="center">
-                <mat-checkbox class="example-margin"></mat-checkbox>
-            </td>
-          </ng-container>
+        </ng-container>
+  
+        <ng-container matColumnDef="crear">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Crear </th>
+          <td mat-cell *matCellDef="let element" align="center">
+              <mat-checkbox class="example-margin" [formControl]="element.get( 'crear' )"></mat-checkbox>
+          </td>
+        </ng-container>
+  
+        <ng-container matColumnDef="modificar">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Modificar </th>
+          <td mat-cell *matCellDef="let element" align="center">
+              <mat-checkbox class="example-margin" [formControl]="element.get( 'modificar' )"></mat-checkbox>
+          </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="consultar">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Consultar </th>
+          <td mat-cell *matCellDef="let element" align="center">
+              <mat-checkbox class="example-margin" [formControl]="element.get( 'consultar' )"></mat-checkbox>
+          </td>
+        </ng-container>
 
-          <ng-container matColumnDef="eliminar">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Eliminar </th>
-            <td mat-cell *matCellDef="let element" align="center">
-                <mat-checkbox class="example-margin"></mat-checkbox>
-            </td>
-          </ng-container>
-        
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <ng-container matColumnDef="eliminar">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Eliminar </th>
+          <td mat-cell *matCellDef="let element" align="center">
+              <mat-checkbox class="example-margin" [formControl]="element.get( 'eliminar' )"></mat-checkbox>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
     </div>
 </div>
