--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-fase-inicio/tabla-fase-inicio.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-fase-inicio/tabla-fase-inicio.component.html
@@ -9,34 +9,36 @@
       
           <ng-container matColumnDef="funcionalidad">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Funcionalidad </th>
-              <td mat-cell *matCellDef="let element" align="center"> <b> {{ element.funcionalidad }} </b> </td>
+              <td mat-cell *matCellDef="let element" align="center">
+                <b>{{ element.get( 'funcionalidad' ).value }}</b>
+              </td>
           </ng-container>
     
           <ng-container matColumnDef="crear">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Crear </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <mat-checkbox class="example-margin"></mat-checkbox>
+                <mat-checkbox class="example-margin" [formControl]="element.get( 'crear' )"></mat-checkbox>
             </td>
           </ng-container>
     
           <ng-container matColumnDef="modificar">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Modificar </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <mat-checkbox class="example-margin"></mat-checkbox>
+                <mat-checkbox class="example-margin" [formControl]="element.get( 'modificar' )"></mat-checkbox>
             </td>
           </ng-container>
         
           <ng-container matColumnDef="consultar">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Consultar </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <mat-checkbox class="example-margin"></mat-checkbox>
+                <mat-checkbox class="example-margin" [formControl]="element.get( 'consultar' )"></mat-checkbox>
             </td>
           </ng-container>
 
           <ng-container matColumnDef="eliminar">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Eliminar </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <mat-checkbox class="example-margin"></mat-checkbox>
+                <mat-checkbox class="example-margin" [formControl]="element.get( 'eliminar' )"></mat-checkbox>
             </td>
           </ng-container>
         
