--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/crear-roles/crear-roles.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/crear-roles/crear-roles.component.html
@@ -24,5 +24,5 @@
             Crear roles
     </button>
   
-    <app-tabla-crear-roles></app-tabla-crear-roles>
+    <app-tabla-crear-roles *ngIf="sinRegistros === false" (sinRegistros)="sinRegistros = $event"></app-tabla-crear-roles>
 </div>
