--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-crear-roles/tabla-crear-roles.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-crear-roles/tabla-crear-roles.component.html
@@ -19,12 +19,12 @@
     
           <ng-container matColumnDef="nombreRol">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 40%;"> Nombre de la lista </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreRol }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.nombre }} </td>
           </ng-container>
     
           <ng-container matColumnDef="estadoRol">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la lista </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoRol }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.eliminado === false ? 'Activo' : 'Inactivo' }} </td>
           </ng-container>
         
           <ng-container matColumnDef="gestion">
@@ -34,7 +34,7 @@
               <button mat-raised-button
                       color="accent" 
                       class="btn-table"
-                      [routerLink]="[ 'editarRol', element.id ]">
+                      [routerLink]="[ 'editarRol', element.perfilId ]">
                       Ver detalle/Editar
               </button>
     
