--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-fase-cierre/tabla-fase-cierre.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-fase-cierre/tabla-fase-cierre.component.html
@@ -17,28 +17,28 @@
         <ng-container matColumnDef="crear">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Crear </th>
           <td mat-cell *matCellDef="let element" align="center">
-              <mat-checkbox class="example-margin" [formControl]="element.get( 'crear' )"></mat-checkbox>
+              <mat-checkbox class="example-margin" [formControl]="element.get( 'crear' )" [checked]="element.get( 'crear' ).value === true"></mat-checkbox>
           </td>
         </ng-container>
   
         <ng-container matColumnDef="modificar">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Modificar </th>
           <td mat-cell *matCellDef="let element" align="center">
-              <mat-checkbox class="example-margin" [formControl]="element.get( 'modificar' )"></mat-checkbox>
+              <mat-checkbox class="example-margin" [formControl]="element.get( 'modificar' )" [checked]="element.get( 'modificar' ).value === true"></mat-checkbox>
           </td>
         </ng-container>
       
         <ng-container matColumnDef="consultar">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Consultar </th>
           <td mat-cell *matCellDef="let element" align="center">
-              <mat-checkbox class="example-margin" [formControl]="element.get( 'consultar' )"></mat-checkbox>
+              <mat-checkbox class="example-margin" [formControl]="element.get( 'consultar' )" [checked]="element.get( 'consultar' ).value === true"></mat-checkbox>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="eliminar">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Eliminar </th>
           <td mat-cell *matCellDef="let element" align="center">
-              <mat-checkbox class="example-margin" [formControl]="element.get( 'eliminar' )"></mat-checkbox>
+              <mat-checkbox class="example-margin" [formControl]="element.get( 'eliminar' )" [checked]="element.get( 'eliminar' ).value === true"></mat-checkbox>
           </td>
         </ng-container>
 
