--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-crear-roles/tabla-crear-roles.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-roles/components/tabla-crear-roles/tabla-crear-roles.component.html
@@ -41,13 +41,17 @@
               <button mat-raised-button
                       color="accent" 
                       class="btn-table"
-                      name="desactivarBtn">
+                      name="desactivarBtn"
+                      *ngIf="element.eliminado === false"
+                      (click)="activarDesactivarPerfil( element )">
                       Desactivar
               </button>
     
               <button mat-raised-button
                       color="accent" 
-                      class="btn-table">
+                      class="btn-table"
+                      *ngIf="element.eliminado === true"
+                      (click)="activarDesactivarPerfil( element )">
                       Activar
               </button>
         
