--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/tabla-gestionar-usuarios/tabla-gestionar-usuarios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/tabla-gestionar-usuarios/tabla-gestionar-usuarios.component.html
@@ -29,7 +29,7 @@
 
           <ng-container matColumnDef="numeroDocumento">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de documento </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDocumento }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroIdentificacion }} </td>
           </ng-container>
 
           <ng-container matColumnDef="rol">
